# georges

./: README.md  pyproject.toml
georges/: model_prediction.ipynb  model_training.ipynb
georges/.ipynb_checkpoints/: model_training-checkpoint.ipynb
tests/: test_georges.py
