[tool.poetry]
name = "georges"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.19.5"
torch = "1.7.1"
torchvision = "0.8.2"
Pillow = "7.0.0"
jupyter = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
